<resources>
    <string name="app_name">Cricket Sport Score</string>
    <string name="hello">hello</string>
    <string name="john">john</string>
    <string name="search_elements">search_elements</string>
    <string name="goals">Goals</string>
    <string name="Cricket">cricket</string>
    <string name="live_score">Live Score</string>
    <string name="cricket">Cricket</string>
    <string name="leagues">Leagues</string>
    <string name="sample">sample</string>
    <string name="sample_2">sample 2</string>
    <string name="search">Search</string>
    <string name="trending">NEWS</string>
    <string name="home">Home</string>
    <string name="favorite">favorite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="Favorite">Favorite</string>
    <string name="event">Event</string>
    <string name="standing">Standing</string>
    <string name="h2h">H2H</string>
</resources>