<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="710dp"
    android:scrollbars="vertical"
    android:background="@color/colorBackground"
    tools:context="com.cricket.cricket.api.controller.DashboardController"

    >

    <!--//SEARCH BAR AND MENU, APP NAME-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="Cricket Sport Score"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />






    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--//END OF MENU SEARCH AND APP NAME-->

    <!--// START OF SCROLL VIEW AND VIEW GRID INTENT-->

        <!--Child Components GRID-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        tools:layout_editor_absoluteX="-36dp">


        <LinearLayout
            android:id="@+id/layoutLeagues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="1"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toStartOf="@id/layoutScore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/open_leagues"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/leagues" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/leagues"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutLeagues"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/open_liveScore"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/live_score" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/live_score"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toStartOf="@id/layoutScore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutLeagues">

            <ImageView
                android:id="@+id/open_standing"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/standing" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/standing"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutsample2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutLeagues"
            app:layout_constraintTop_toBottomOf="@id/layoutScore">

            <ImageView
                android:id="@+id/open_h2h"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/headtohead" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/h2h"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <!--            //FOR TRENDING NEWS-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="22dp"
            android:background="@drawable/trending_background"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="@id/layoutsample2"
            app:layout_constraintStart_toStartOf="@id/layoutLeagues"
            app:layout_constraintTop_toBottomOf="@+id/layoutEvent">

            <TextView
                android:id="@+id/textTrending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rectangle_background"
                android:paddingStart="8dp"
                android:paddingTop="2dp"
                android:paddingEnd="8dp"
                android:paddingBottom="2dp"
                android:text="@string/trending"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/latest_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:scrollbars="vertical"
                android:text="Welcome to Cricket Live Score app!"
                android:textColor="@color/colorWhite"

                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/textTrending"
                tools:layout_editor_absoluteX="24dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--//END OF SCROLLVIEW AND GRID APP AND INTENT-->




</androidx.constraintlayout.widget.ConstraintLayout>